// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Dropdown Custom Button Options 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    one
  </div>
   
  <div
    class="text-right"
    style="position: inherited"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4 primary"
      >
        <i
          class="material-icons svelte-n2zup4"
        >
          person
        </i>
         
        <span>
          Primary
        </span>
         
        <i
          class="material-icons arrow svelte-1dsb53o"
        >
          arrow_drop_down
        </i>
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</section>
`;

exports[`Storyshots Components/Dropdown Custom Options 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    simple
  </div>
   
  <div
    class="text-center"
    style="position: inherited"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4"
      >
         
        <span>
          simple
        </span>
         
        <i
          class="material-icons arrow svelte-1dsb53o"
        >
          arrow_drop_down
        </i>
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</section>
`;

exports[`Storyshots Components/Dropdown Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    one
  </div>
   
  <div
    class="text-center"
    style="position: inherited"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4"
      >
         
        <span>
          one
        </span>
         
        <i
          class="material-icons arrow svelte-1dsb53o"
        >
          arrow_drop_down
        </i>
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</section>
`;

exports[`Storyshots Components/Dropdown Icon Only With Relative Parent 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    one
  </div>
   
  <div
    class="text-center"
    style="position: relative"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4 iconOnly"
      >
        <i
          class="material-icons svelte-n2zup4"
        >
          more_vert
        </i>
         
         
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</section>
`;

exports[`Storyshots Components/Dropdown Independent Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    one
  </div>
   
  <div
    class="text-left"
    style="position: inherited"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4"
      >
        <i
          class="material-icons svelte-n2zup4"
        >
          settings
        </i>
         
        <span>
          options
        </span>
         
        <i
          class="material-icons arrow svelte-1dsb53o"
        >
          arrow_drop_down
        </i>
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</section>
`;

exports[`Storyshots Components/Dropdown Simple Array 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    one
  </div>
   
  <div
    class="text-center"
    style="position: inherited"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4"
      >
         
        <span>
          one
        </span>
         
        <i
          class="material-icons arrow svelte-1dsb53o"
        >
          arrow_drop_down
        </i>
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</section>
`;
